@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-22T01:01:33Z",
+  "timestamp" : "2025-08-23T00:59:17Z",
   "count_outdated" : 558,
   "uniques_outdated" : 384,
-  "count" : 569,
-  "uniques" : 395,
+  "count" : 570,
+  "uniques" : 396,
   "clones" : [
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2025-08-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
