@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 11,
+  "count": 12,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2025-08-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-22T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
